--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
   <script src="script.js"></script>
+	<script src="styles.css"></script>
 </html>
 
