--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Basketball Shooting Contest</title>
     <link rel="stylesheet" href="./css/styles.css" media="screen" title="no title" charset="utf-8">
+	  <link href="script.js">
     <link href="https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css">
   </head>
   <body>
@@ -72,6 +73,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.min.js"></script>
   <script src="script.js"></script>
-	<script src="styles.css"></script>
 </html>
 
