--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Basketball Shooting Contest</title>
-    <link rel="stylesheet" href="./css/styles.css" media="screen" title="no title" charset="utf-8">
-	  <link href="script.js">
+    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css">
   </head>
   <body>
